# SWFModernRuntime

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.test  Makefile.test_simple  Makefile.test_simple_string_id  Makefile.test_string_id  README.md  STRING_ID_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  STRING_ID_OPTIMIZATION_POC.md  STRING_VARIABLE_IMPLEMENTATION.md  TRACE_SWF_4_WASM_GENERATION_GUIDE.md  VARIABLE_OPTIMIZATION_ANALYSIS.md  WASM_PROJECT_PLAN.md  test_string_id_optimization.c  test_string_id_simple  test_string_id_simple.c  test_string_variables.c  test_string_vars.c  test_variables_simple  test_variables_simple.c
docs/: README.md  index.html
docs/examples/trace-swf-test/: index.html
include/: common.h  utils.h
include/actionmodern/: action.h  object.h  stackvalue.h  variables.h
include/flashbang/: flashbang.h
include/libswf/: recomp.h  stackvalue.h  swf.h  tag.h
include/memory/: heap.h
src/: utils.c
src/actionmodern/: action.c  object.c  variables.c  variables.cpp
src/flashbang/: flashbang.c
src/flashbang/shaders/: Makefile  compute.glsl  fragment.glsl  vertex.glsl
src/libswf/: swf.c  swf_core.c  tag.c  tag_stubs.c
src/memory/: heap.c
wasm/: README.md
wasm/examples/trace-swf-test/: build.sh  constants.c  constants.h  draws.c  draws.h  index.html  out.h  script_0.c  script_decls.h  script_defs.c  tagMain.c
